| Bug #58953 | 5.5 does not build with -DWITHOUT_PERFSCHEMA_STORAGE_ENGINE=1 | ||
|---|---|---|---|
| Submitted: | 15 Dec 2010 21:08 | Modified: | 22 Dec 2010 19:12 |
| Reporter: | Mark Callaghan | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: Compiling | Severity: | S3 (Non-critical) |
| Version: | 5.5.8 | OS: | Linux |
| Assigned to: | Davi Arnaut | CPU Architecture: | Any |
| Tags: | cmake, perfschema | ||
[15 Dec 2010 21:08]
Mark Callaghan
[15 Dec 2010 21:15]
Mark Callaghan
The problem reproduces using this too: ~/bin/cmake . -DCMAKE_INSTALL_PREFIX=/data/558orig -DBUILD_CONFIG=mysql_release_noaio -DMYSQL_UNIX_ADDR=/data/558orig/var/mysql.sock -DWITH_EMBEDDED_SERVER=0 -DWITH_PERFSCHEMA_STORAGE_ENGINE=0
[15 Dec 2010 22:39]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/127006 3197 Davi Arnaut 2010-12-15 Bug#58953: 5.5 does not build with -DWITHOUT_PERFSCHEMA_STORAGE_ENGINE=1 The MYSQL_LOG::open member function does not take a PSI key file argument when the PSI interface is not present.
[15 Dec 2010 22:59]
Davi Arnaut
Queued to mysql-5.5-bugteam.
[17 Dec 2010 12:50]
Bugs System
Pushed into mysql-5.5 5.5.9 (revid:georgi.kodinov@oracle.com-20101217124733-p1ivu6higouawv8l) (version source revid:davi.arnaut@oracle.com-20101215223843-qbmtsq0ppy05ht9c) (merge vers: 5.5.8) (pib:24)
[17 Dec 2010 12:55]
Bugs System
Pushed into mysql-trunk 5.6.1 (revid:georgi.kodinov@oracle.com-20101217125013-y8pb3az32rtbplc9) (version source revid:davi.arnaut@oracle.com-20101215231037-swrblumh9rj3sj5i) (merge vers: 5.6.1) (pib:24)
[22 Dec 2010 19:12]
Paul DuBois
Noted in 5.5.9 changelog. Configuring MySQL with -DWITHOUT_PERFSCHEMA_STORAGE_ENGINE=1 caused build failures.
