Bug#58953: 5.5 does not build with -DWITHOUT_PERFSCHEMA_STORAGE_ENGINE=1

The MYSQL_LOG::open member function does not take a PSI
key file argument when the PSI interface is not present.